--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
---font-space-grotesk: var(--font-space-grotesk);
+  --font-space-grotesk: var(--font-space-grotesk);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,3 +25,64 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@layer utilities {
+  @property --rotate {
+    syntax: "<angle>";
+    initial-value: 132deg;
+    inherits: false;
+  }
+
+  @keyframes spin-gradient {
+    0% {
+      --rotate: 0deg;
+    }
+    100% {
+      --rotate: 360deg;
+    }
+  }
+
+  .gradient-border::before {
+    content: "";
+    position: absolute;
+    top: -1%;
+    left: -2%;
+    width: 104%;
+    height: 102%;
+    border-radius: 12px;
+    background-image: linear-gradient(
+      var(--rotate),
+      #d3a86c,
+      #91c8ca 43%,
+      #d3a86c
+    );
+    animation: spin-gradient 2.5s linear infinite;
+    z-index: -1;
+  }
+
+  .gradient-border::after {
+    content: "";
+    position: absolute;
+    top: calc(var(--card-height) / 6);
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    transform: scale(0.8);
+    filter: blur(calc(var(--card-height) / 6));
+    background-image: linear-gradient(
+      var(--rotate),
+      #d3a86c,
+      #91c8ca 43%,
+      #d3a86c
+    );
+    animation: spin-gradient 2.5s linear infinite;
+    opacity: 1;
+    transition: opacity 0.5s;
+    z-index: -1;
+  }
+}
+
+
