--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 @layer utilities {
   @property --rotate {
     syntax: "<angle>";
@@ -34,6 +33,7 @@ body {
     inherits: false;
   }
 
+  /* spinning border animation  */
   @keyframes spin-gradient {
     0% {
       --rotate: 0deg;
@@ -83,6 +83,27 @@ body {
     transition: opacity 0.5s;
     z-index: -1;
   }
+
+  /* floating icons animation  */
+  @keyframes float {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-15px);
+    }
+  }
+
+  .animate-float {
+    animation: float 4s ease-in-out infinite;
+  }
+
+  .animate-float-slow {
+    animation: float 6s ease-in-out infinite;
+  }
+
+  .animate-float-fast {
+    animation: float 3s ease-in-out infinite;
+  }
 }
-
-
